--- a/ablog/blog/templates/article_details.html
+++ b/ablog/blog/templates/article_details.html
@@ -1,4 +1,9 @@
+{% extends 'base.html' %}
 
+{% block content %}
+
+
+{% block title %}{{ post.title_tag }}{% endblock %}
 
 <h1>{{ post.title }}</h1>
 <small>By: {{ post.author.first_name }} 
@@ -11,4 +16,6 @@
 
 <br/><br/>
 
-<a href="{% url 'home' %}">Back</a>
+<a href="{% url 'home' %}" class="btn btn-secondary">Back</a>
+
+{% endblock %}
