--- a/ablog/blog/templates/update_post.html
+++ b/ablog/blog/templates/update_post.html
@@ -1,15 +1,15 @@
 {% extends 'base.html' %}
-{% block title %}Create New Blog Post{% endblock %}
+{% block title %}Edit Blog Post{% endblock %}
 
 {% block content %}
 
-<h1>Add Blog Post...</h1>
+<h1>Update Post...</h1>
 
 <div class="form-group">
     <form method="POST">
         {% csrf_token %}
         {{ form.as_p }}
-        <button class="btn btn-secondary">Post</button>
+        <button class="btn btn-secondary">Update</button>
     </form>
 </div>
 
