--- a/ablog/blog/templates/home.html
+++ b/ablog/blog/templates/home.html
@@ -7,8 +7,16 @@
 <ul>
 {% for post in object_list %}
     <li><a href="{% url 'article-detail' post.pk %}">{{ post.title }}</a> - 
-        {{ post.author.first_name }}  {{ post.author.last_name}}
-        <a href="{% url 'update_post' post.pk %}">Edit</a><br/>
+        {{ post.author.first_name }}  
+        {{ post.author.last_name}} -
+        {{ post.post_date }} <br/>
+
+        {% if user.is_authenticated %}
+
+        <a href="{% url 'update_post' post.pk %}">(Edit)</a>
+        <a href="{% url 'delete_post' post.pk %}">(Delete)</a><br/>
+
+        {% endif %}
     {{ post.body }}</li>
 {% endfor%}
 </ul>
